Version 0.10.4
==============

Released ????? ??, ????

- Support for Djibouti (Abdisamade)
- Support for United Arab Emirates (marcomasulli, mborsetti)
- Support for Chile (mborsetti, dr-p)
- Support for Angola (jusce17, pietervdw115, dr-p)
- Support for Malawi (pietervdw115)
- Korea fixes (MYUNGJE, dr-p, hiddentrap)
- Australia 2020 fix (bencollerson, trauty-is-me)
- Croatia fixes and updates (jangrg, mborsetti, dr-p)
- United States fixes (raffg, bgmiles, dr-p)
- UK fixes/improvements (dr-p, richard-kunert, emreay-)
- Russia fixes (tserekh)
- Ireland fixes (chiuczek)
- Spain observed holidays fix (sermayoral)
- South Africa observed holidays fix (pietervdw115)
- France fix (mborsetti)
- Mexico fix (mborsetti)
- Singapore 2022 fix (mborsetti)
- Japan 1990-1993 fixes (sakurai-youhei)
- Fix on occasional pop_named exception (mborsetti)
- convertdate fallback if hijri-converter not available (mborsetti, dr-p)
- enabled Travis tests for python3.9 (mborsetti)
- added flake8 to unittests (mborsetti)


Version 0.10.3
==============

Released July 15, 2020

- Added get_named(substring) method to retrieve holidays by name (dr-p)
- Added pop_named(substring) method to pop specific holiday/s by name (samtregar, dr-p)
- Support for Burundi (bmwachajr)
- Support for Latvia (rolandinsh)
- Support for Romania (dorianm)
- Spain fix (dr-p)
- Netherlands fix (RooieRakkert)
- Switzerland fixes (cgrigis)
- Germany fix (MikeTsenatek)
- Added korean_cal attribute to Korea and Vietnam (seriousran, pelennor)
- United States fixes (patrick-nicholson, dr-p)
- Singapore fixes + 2021 holidays (mborsetti)


Version 0.10.2
==============

Released April 13, 2020

- Support for Spain (piliamaurizio, jbroudou, dr-p, gerardo15)
- Support for Turkey (cemkaragozlu)
- Support for Korea (1kko, dr-p)
- Support for Vietnam (1kko, dr-p)
- Support for Morocco (abensrhir, dr-p)
- Mexico fix (Rosi2143, dr-p)
- Croatia fix (sebojanko, dr-p)
- US Georgia fix (jbroudou, dr-p)