@@ -8,6 +8,7 @@ Released ????? ??, ????
 - Support for Chile (mborsetti, dr-p)
 - Support for Angola (jusce17, pietervdw115, dr-p)
 - Support for Malawi (pietervdw115)
+- Support for Bangladesh (dr-p, tasnimislam)
 - Korea fixes (MYUNGJE, dr-p, hiddentrap)
 - Australia 2020 fix (bencollerson, trauty-is-me)
 - Croatia fixes and updates (jangrg, mborsetti, dr-p)
